fix/detail page anonymity icon css z-index #182

--- a/src/styles/community/detail.css
+++ b/src/styles/community/detail.css
@@ -179,7 +179,7 @@
 
 #detail-secret {
     position: absolute;
-    z-index: 2px;
+    z-index: 1;
     font-size: x-large;
     margin-left: 34px;
     margin-top: 2px;
